--- a/ETL_Mini_Project_Starter_Code.ipynb
+++ b/ETL_Mini_Project_Starter_Code.ipynb
@@ -886,9 +886,9 @@
    "outputs": [],
    "source": [
     "# Export categories_df and subcategories_df as CSV files.\n",
-    "category_df.to_csv(\"Resources/category.csv\", index=False)\n",
+    "category_df.to_csv(\"Output/category.csv\", index=False)\n",
     "\n",
-    "subcategory_df.to_csv(\"Resources/subcategory.csv\", index=False)"
+    "subcategory_df.to_csv(\"Output/subcategory.csv\", index=False)"
    ]
   },
   {
@@ -2399,7 +2399,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
+    "campaign_cleaned.to_csv(\"Output/campaign.csv\", index=False)"
    ]
   },
   {
@@ -2480,7 +2480,10 @@
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
     "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
-    "contact_info_df.head()"
+    "contact_info_df.columns = contact_info_df.iloc[0]\n",
+    "contact_info_df.drop(0,inplace=True)\n",
+    "contact_info_df\n",
+    "\n"
    ]
   },
   {
@@ -2610,7 +2613,10 @@
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "contact_info = pd.DataFrame(contact_info_df)\n",
+    "\n",
+    "contact_info[['contact_id', 'name', 'email']] = contact_info['contact_info'].apply(lambda x: pd.Series(json.loads(x)))\n",
+    "# to the 'contact_id', 'name', 'email' columns."
    ]
   },
   {
@@ -2636,7 +2642,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "print(contact_info.info())"
    ]
   },
   {
@@ -2768,9 +2775,13 @@
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
     "\n",
+    "contact_info[['first_name', 'last_name']] = contact_info['name'].str.split(' ', expand=True)\n",
+    "contact_info.drop('name', axis=1, inplace=True)\n",
     "\n",
     "# Drop the contact_name column\n",
-    "\n"
+    "\n",
+    "contact_info.drop('contact_info', axis=1, inplace=True)\n",
+    "contact_info"
    ]
   },
   {
@@ -2900,7 +2911,10 @@
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contact_info = contact_info[['contact_id','first_name', 'last_name','email']]\n",
+    "\n",
+    "print(contact_info)"
    ]
   },
   {
@@ -2927,7 +2941,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "print(contact_info.info())"
    ]
   },
   {
